"cast, reviews: fix reviews text-align, add scroll on first load"

--- a/src/components/MovieReviews/MovieReviews.module.css
+++ b/src/components/MovieReviews/MovieReviews.module.css
@@ -2,7 +2,7 @@
   padding: 0 10px;
   margin-top: 30px;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   flex-wrap: wrap;
   gap: 30px;
